# wind-temperature-visualizer

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
scripts/: install.bat  install.sh  run.bat  run.sh
src/: wind_temp_visualizer.py
